# Server-Client

./: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml  ex.yml
src/HttpServer/: CMakeLists.txt  Controller.cpp  Controller.h  HttpServer.cpp  HttpServer.h  jsonModelDefs.h
src/Model/: CMakeLists.txt  Client.cpp  Client.h  Item.cpp  Item.h  ModelDefs.h
src/Model/Repository/: ClientRepository.cpp  ClientRepository.h  ItemRepository.cpp  ItemRepository.h  Repository.h
src/Service/: CMakeLists.txt  ClientService.cpp  ClientService.h  IClientService.h  IItemService.h  ItemService.cpp  ItemService.h
src/Service/Defs/: ClientDefs.h  CommonDefs.h  ItemDefs.h
src/Utils/: CMakeLists.txt  timeUtil.cpp  timeUtil.h
src/View/: CMakeLists.txt  ConsoleView.cpp  ConsoleView.h  View.h
src/ViewConsole/: CMakeLists.txt
src/ViewServer/: CMakeLists.txt  Server.cpp  Server.h
tests/: CMakeLists.txt  ClientRepositoryTests.cpp  ClientServiceTests.cpp  ItemRepositoryTests.cpp  ItemServiceTests.cpp
tests/integration/: ClientIntegrationServiceTests.cpp  ItemIntegrationServiceTests.cpp
tests/mock/: MockClientRepository.h  MockClientService.h  MockItemRepository.h  MockItemService.h
tests/ut/: ClientRepositoryTests.cpp  ClientServiceTests.cpp  HttpServerTests.cpp  ItemRepositoryTests.cpp  ItemServiceTests.cpp
